test/runtime-integration-tests/TestPrograms/Syntax/Invalid/alias_bad_domain.5th
alias X as http://;
main(): int { return 0; }
